// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool discovery snapshot > full tool catalog ID set is locked (sorted) > full-catalog-tool-ids 1`] = `
[
  "account_status",
  "account_upgrade",
  "account_usage_report",
  "approve_agent_work",
  "approve_decision",
  "batch_action",
  "batch_create_entities",
  "batch_delete_entities",
  "check_spawn_guard",
  "classify_task_model",
  "comment_on_entity",
  "complete_plan",
  "configure_org",
  "configure_outcome_type",
  "create_decision",
  "create_entity",
  "create_milestone",
  "create_task",
  "delegate_agent_task",
  "entity_action",
  "get_active_sessions",
  "get_agent_status",
  "get_decision_history",
  "get_initiative_pulse",
  "get_initiative_stream_state",
  "get_morning_brief",
  "get_my_trust_context",
  "get_org_snapshot",
  "get_outcome_attribution",
  "get_pending_decisions",
  "get_relevant_learnings",
  "get_scoring_signals",
  "get_task_with_context",
  "handoff_task",
  "improve_plan",
  "list_entities",
  "list_entity_comments",
  "orgx_apply_changeset",
  "orgx_bootstrap",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_emit_activity",
  "orgx_free_audit",
  "pin_workstream",
  "query_org_memory",
  "queue_action",
  "recall_memory",
  "recommend_next_action",
  "record_outcome",
  "record_plan_edit",
  "record_quality_score",
  "reject_decision",
  "remember_decision",
  "resume_agent_run",
  "resume_plan_session",
  "review_artifact",
  "save_artifact",
  "scaffold_initiative",
  "score_next_up_queue",
  "scoring_config",
  "spawn_agent_task",
  "start_autonomous_session",
  "start_plan_session",
  "stats",
  "submit_learning",
  "sync_client_state",
  "track_project_progress",
  "update_entity",
  "update_stream_progress",
  "validate_studio_content",
  "verify_entity_completion",
  "workspace",
]
`;

exports[`tool discovery snapshot > full tool catalog description hashes are locked > full-catalog-description-hashes 1`] = `
{
  "account_status": "e3b0c44298fc",
  "account_upgrade": "e3b0c44298fc",
  "account_usage_report": "e3b0c44298fc",
  "approve_agent_work": "b4c070a44b44",
  "approve_decision": "114326bff5d8",
  "batch_action": "e3b0c44298fc",
  "batch_create_entities": "e3b0c44298fc",
  "batch_delete_entities": "e3b0c44298fc",
  "check_spawn_guard": "ee461e467241",
  "classify_task_model": "e7a7fdbebacf",
  "comment_on_entity": "e3b0c44298fc",
  "complete_plan": "330451feab64",
  "configure_org": "b73f7e934044",
  "configure_outcome_type": "252a9424b81e",
  "create_decision": "557b9ac37d43",
  "create_entity": "e3b0c44298fc",
  "create_milestone": "863fb19814fb",
  "create_task": "f640a79ea352",
  "delegate_agent_task": "703ed3826af3",
  "entity_action": "e3b0c44298fc",
  "get_active_sessions": "5b6d3068a1e3",
  "get_agent_status": "014e551e7e3a",
  "get_decision_history": "20f4f6a2006f",
  "get_initiative_pulse": "aaf6f9d8fe4f",
  "get_initiative_stream_state": "e475687922d2",
  "get_morning_brief": "9e518ba964ae",
  "get_my_trust_context": "9607303bfebb",
  "get_org_snapshot": "e3b0c44298fc",
  "get_outcome_attribution": "6e52c9ca7f8f",
  "get_pending_decisions": "d36f50e1bd2f",
  "get_relevant_learnings": "3abd3a62593e",
  "get_scoring_signals": "f72acd307b0f",
  "get_task_with_context": "e3b0c44298fc",
  "handoff_task": "7ae4ffa2a322",
  "improve_plan": "eb43c66769b5",
  "list_entities": "e3b0c44298fc",
  "list_entity_comments": "e3b0c44298fc",
  "orgx_apply_changeset": "2e03a4773519",
  "orgx_bootstrap": "30e6799dcca1",
  "orgx_describe_action": "cd0e2d14411e",
  "orgx_describe_tool": "ca3bdfd2de53",
  "orgx_emit_activity": "dcdfbef096f3",
  "orgx_free_audit": "a479d67172b2",
  "pin_workstream": "413228690bb8",
  "query_org_memory": "181cff1ac868",
  "queue_action": "a469db460ac6",
  "recall_memory": "44be260123e3",
  "recommend_next_action": "de62b8d2aab4",
  "record_outcome": "637f5c1c26a0",
  "record_plan_edit": "68ff5a8bb1e0",
  "record_quality_score": "3de8dc2db6c8",
  "reject_decision": "b108e5dcd9e4",
  "remember_decision": "d55e3b92c1f6",
  "resume_agent_run": "e3b0c44298fc",
  "resume_plan_session": "9723520cdb6f",
  "review_artifact": "e3b0c44298fc",
  "save_artifact": "e3b0c44298fc",
  "scaffold_initiative": "e3b0c44298fc",
  "score_next_up_queue": "1fb0387faad9",
  "scoring_config": "70f43e1a6bef",
  "spawn_agent_task": "edd55da4e458",
  "start_autonomous_session": "0f1c10ebd03f",
  "start_plan_session": "ce3624dbf183",
  "stats": "09bf08a53ca0",
  "submit_learning": "a55161028691",
  "sync_client_state": "835db6dc15fd",
  "track_project_progress": "44a2c7eb9751",
  "update_entity": "e3b0c44298fc",
  "update_stream_progress": "025072c4c86e",
  "validate_studio_content": "22b21ede0422",
  "verify_entity_completion": "e3b0c44298fc",
  "workspace": "fd799a38f5bb",
}
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "commander" exposes a locked tool set > profile-commander-tool-ids 1`] = `
[
  "approve_decision",
  "comment_on_entity",
  "configure_org",
  "create_decision",
  "create_entity",
  "create_milestone",
  "create_task",
  "entity_action",
  "get_agent_status",
  "get_decision_history",
  "get_initiative_pulse",
  "get_org_snapshot",
  "get_pending_decisions",
  "get_task_with_context",
  "list_entities",
  "list_entity_comments",
  "orgx_bootstrap",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_free_audit",
  "pin_workstream",
  "query_org_memory",
  "queue_action",
  "recommend_next_action",
  "record_quality_score",
  "reject_decision",
  "scaffold_initiative",
  "score_next_up_queue",
  "scoring_config",
  "stats",
  "update_entity",
  "verify_entity_completion",
  "workspace",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "executor" exposes a locked tool set > profile-executor-tool-ids 1`] = `
[
  "comment_on_entity",
  "entity_action",
  "get_initiative_stream_state",
  "get_task_with_context",
  "handoff_task",
  "list_entities",
  "orgx_apply_changeset",
  "orgx_bootstrap",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_emit_activity",
  "pin_workstream",
  "spawn_agent_task",
  "sync_client_state",
  "update_stream_progress",
  "validate_studio_content",
  "workspace",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "memory" exposes a locked tool set > profile-memory-tool-ids 1`] = `
[
  "approve_agent_work",
  "approve_decision",
  "create_decision",
  "get_decision_history",
  "get_initiative_pulse",
  "get_org_snapshot",
  "get_pending_decisions",
  "get_task_with_context",
  "orgx_bootstrap",
  "orgx_describe_action",
  "orgx_describe_tool",
  "query_org_memory",
  "recall_memory",
  "reject_decision",
  "remember_decision",
  "track_project_progress",
  "workspace",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "observer" exposes a locked tool set > profile-observer-tool-ids 1`] = `
[
  "get_agent_status",
  "get_decision_history",
  "get_initiative_pulse",
  "get_initiative_stream_state",
  "get_org_snapshot",
  "get_pending_decisions",
  "get_task_with_context",
  "list_entities",
  "list_entity_comments",
  "orgx_bootstrap",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_free_audit",
  "query_org_memory",
  "recommend_next_action",
  "resume_plan_session",
  "score_next_up_queue",
  "scoring_config",
  "stats",
  "workspace",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "planner" exposes a locked tool set > profile-planner-tool-ids 1`] = `
[
  "batch_create_entities",
  "complete_plan",
  "create_decision",
  "create_entity",
  "create_milestone",
  "create_task",
  "entity_action",
  "get_active_sessions",
  "get_initiative_pulse",
  "get_task_with_context",
  "improve_plan",
  "list_entities",
  "orgx_bootstrap",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_free_audit",
  "query_org_memory",
  "recommend_next_action",
  "record_plan_edit",
  "resume_plan_session",
  "scaffold_initiative",
  "start_plan_session",
  "update_entity",
  "workspace",
]
`;
